--- a/th.AdminibotModern/app.config
+++ b/th.AdminibotModern/app.config
@@ -1,24 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="th.AdminibotModern.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <th.AdminibotModern.Properties.Settings>
-            <setting name="SelectedAccentColor" serializeAs="String">
-                <value>#FFA200FF</value>
-            </setting>
-            <setting name="SelectedThemeSource" serializeAs="String">
-                <value>/FirstFloor.ModernUI;component/Assets/ModernUI.Dark.xaml</value>
-            </setting>
-            <setting name="SelectedThemeDisplayName" serializeAs="String">
-                <value>Dark</value>
-            </setting>
-            <setting name="SelectedFontSize" serializeAs="String">
-                <value>Large</value>
-            </setting>
-        </th.AdminibotModern.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="th.AdminibotModern.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <userSettings>
+    <th.AdminibotModern.Properties.Settings>
+      <setting name="SelectedAccentColor" serializeAs="String">
+        <value>#FFA200FF</value>
+      </setting>
+      <setting name="SelectedThemeSource" serializeAs="String">
+        <value>/FirstFloor.ModernUI;component/Assets/ModernUI.Dark.xaml</value>
+      </setting>
+      <setting name="SelectedThemeDisplayName" serializeAs="String">
+        <value>Dark</value>
+      </setting>
+      <setting name="SelectedFontSize" serializeAs="String">
+        <value>Large</value>
+      </setting>
+    </th.AdminibotModern.Properties.Settings>
+  </userSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
