--- a/th.AdminibotModern/th.AdminibotModern.csproj
+++ b/th.AdminibotModern/th.AdminibotModern.csproj
@@ -31,13 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FirstFloor.ModernUI">
       <HintPath>..\packages\ModernUI.WPF.1.0.6\lib\net45\FirstFloor.ModernUI.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,6 +70,24 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\ChatClient.cs" />
+    <Compile Include="Classes\CommandProcessor.cs" />
+    <Compile Include="Classes\Commands\CommandIdentifier.cs" />
+    <Compile Include="Classes\Commands\ICommandGroup.cs" />
+    <Compile Include="Classes\Database\AdminibotContext.cs" />
+    <Compile Include="Classes\EventLogger.cs" />
+    <Compile Include="Classes\IrcClient.cs" />
+    <Compile Include="Classes\IrcStatus.cs" />
+    <Compile Include="Classes\Database\Command.cs" />
+    <Compile Include="Classes\Database\Event.cs" />
+    <Compile Include="Classes\Database\User.cs" />
+    <Compile Include="Classes\Types.cs" />
+    <Compile Include="Migrations\201601191443353_Initial.cs" />
+    <Compile Include="Migrations\201601191443353_Initial.Designer.cs">
+      <DependentUpon>201601191443353_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Pages\Connection\SignInViewModel.cs" />
     <Compile Include="Pages\Settings\AdminibotSettings.xaml.cs">
       <DependentUpon>AdminibotSettings.xaml</DependentUpon>
     </Compile>
@@ -264,6 +293,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\201601191443353_Initial.resx">
+      <DependentUpon>201601191443353_Initial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
